--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-ejs-layouts": "^2.4.0",
     "express-session": "^1.15.6",
     "morgan": "^1.9.0",
+    "node-growl": "^0.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^6.4.2",
